--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@ title: Home
     <div class="d-flex flex-column fixed-background align-items-center justify-content-center pt-5"
         style="background: url('/assets/img/banner-background.webp'); min-height: 100vh;"
     >
-        <img class="logo-home" data-aos="fade-up" src="/assets/img/logo-text.svg">
+        <img class="logo-home" alt="Muriki Studio" data-aos="fade-up" src="/assets/img/logo-text.svg">
 
         <h5 data-aos="fade-up" class="mt-0 px-3 text-center logo-home">
             <span data-translate="muriki-about-short"></span>
-            <img src="/assets/img/icons/ptbr.svg" width="16">
+            <img src="/assets/img/icons/ptbr.svg" alt="🇧🇷" width="16">
         </h5>
 
         <div class="d-inline-flex align-items-center justify-content-center mt-4" data-aos="fade-up">
@@ -32,7 +32,7 @@ title: Home
         <a href="/games/{{ game.key }}" class="hover d-flex flex-column fixed-background align-items-center justify-content-center"
             style="background: url('/assets/img/{{ game.key }}/banner.webp'); min-height: 70vh;"
         >
-            <img class="logo-home" data-aos="fade-up" src="/assets/img/{{ game.key }}/logo.webp">
+            <img class="logo-home" data-aos="fade-up" src="/assets/img/{{ game.key }}/logo.webp" alt="{{ game.name }}">
 
             <h5 data-aos="fade-up" class="mt-4 px-3 text-center logo-home text-white text-shadow">
                 <span data-translate="{{ game.key }}-desc-tiny"></span>
@@ -46,7 +46,7 @@ title: Home
         <!-- Team -->
         <div class="d-flex flex-column align-items-center justify-content-center">
             <h2 class="my-0" data-aos="fade-up" data-translate="the-team"></h2>
-            <img class="logo-home rounded-pill logo-home mt-4" data-aos="fade-up" src="/assets/img/team.webp">
+            <img class="logo-home rounded-pill logo-home mt-4" data-aos="fade-up" src="/assets/img/team.webp" alt="Muriki Team">
             <p class="logo-home text-center mt-4" data-aos="fade-up" data-translate="muriki-about-formation"></p>
             <ul class="my-2" data-aos="fade-up">
                 <li data-translate="about-diego"></li>
@@ -61,7 +61,7 @@ title: Home
             <div class="container text-center mt-3" data-aos="fade-up">
                 {% for contact in site.data.contact %}
                     <a class="btn m-1 p-1 col" href="{{ contact.url }}" alt="{{ contact.name }}" title="{{ contact.name }}" target="_blank">
-                        <img class="mr-2 social-icon-img" src="/assets/img/icons/{{ contact.icon }}.svg" width="32">
+                        <img class="mr-2 social-icon-img" src="/assets/img/icons/{{ contact.icon }}.svg" alt="{{ contact.name }}" width="32">
                     </a>
                 {% endfor %}
             </div>
