update zombies and bullets page - remove unused assets - set body to bg-dark

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ title: Home
         <hr>
     {% endfor %}
 
-    <div class="py-5 d-flex flex-column align-items-center justify-content-center bg-dark">
+    <div class="py-5 d-flex flex-column align-items-center justify-content-center">
         <!-- Team -->
         <div class="d-flex flex-column align-items-center justify-content-center">
             <h2 class="my-0" data-aos="fade-up" data-translate="the-team"></h2>
