--- a/pages/games/zombies-and-bullets/index.html
+++ b/pages/games/zombies-and-bullets/index.html
@@ -46,31 +46,11 @@ useful_links:
 ---
 
 <div class="home-content d-flex flex-column">
-    <!-- Banner -->
-    <div class="d-flex flex-column fixed-background align-items-center justify-content-center"
-        style="background: url('/assets/img/zombies-and-bullets/banner.webp'); min-height: 70vh; background-position: center -30vh !important;"
-    >
-        <img class="logo-home" alt="Muriki Studio" data-aos="fade-up" src="/assets/img/zombies-and-bullets/logo.webp">
-    </div>
+    {% include game_banner.html name="Zombies & Bullets" key="zombies-and-bullets" %}
 
     <hr>
 
-    <!-- Screenshots -->
-    <div class="swiper w-100">
-        <div class="swiper-wrapper">
-            {% for screenshot in page.screenshots %}
-            <div class="swiper-slide">
-                <div class="d-flex flex-column overflow-hidden align-items-center">
-                    <img class="w-100" style="max-width: 960px;" loading="lazy" src="/assets/img/zombies-and-bullets/{{ screenshot }}" alt="{{ screenshot }}">
-                    <div class="screenshot-background" style="background: url('/assets/img/zombies-and-bullets/{{ screenshot }}');"></div>
-                </div>
-            </div>
-            {% endfor %}
-        </div>
-        <div class="swiper-pagination"></div>
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
-    </div>
+    {% include game_screenshots.html name="Zombies & Bullets" key="zombies-and-bullets" screenshots=page.screenshots %}
 
     <hr>
 
