--- a/pages/games/zombies-and-bullets/index.html
+++ b/pages/games/zombies-and-bullets/index.html
@@ -58,13 +58,7 @@ useful_links:
     <div class="page-content pt-5 text-white">
         <p data-translate="zombies-and-bullets-desc-long"></p>
 
-        <div class="w-100 mb-5 d-flex justify-content-center row-or-column align-items-center">
-            {% for link in page.links %}
-                <a class="m-2 hover" target="_blank" href="{{ link.url }}">
-                    <img src="/assets/img/get-{{ link.image }}" alt="Play Now On {{ link.name }}" title="{{ link.name }}" style="max-width: 250px">
-                </a>
-            {% endfor %}
-        </div>
+        {% include game_links.html links=page.links %}
 
         {% if page.featured_links %}
         <h3 class="text-center" data-translate="featured-on"></h3>
