add transitions to sliders

--- a/pages/games/mole-maniacs/index.html
+++ b/pages/games/mole-maniacs/index.html
@@ -42,7 +42,7 @@ legal_information:
         </div>
     </div>
 
-    <div class="my-3">
+    <div class="my-3" data-aos="fade-up">
         <hr>
         {% include game_screenshots.html name="Mole Maniacs" key="mole-maniacs" screenshots=page.screenshots %}
         <hr>
