--- a/pages/games/zombies-and-bullets/index.html
+++ b/pages/games/zombies-and-bullets/index.html
@@ -74,7 +74,7 @@ useful_links:
         {% endif %}
     </div>
 
-    <div class="my-3">
+    <div class="my-3" data-aos="fade-up">
         <hr>
         {% include game_screenshots.html name="Zombies & Bullets" key="zombies-and-bullets" screenshots=page.screenshots %}
         <hr>
