--- a/pages/games/zombies-and-bullets/index.html
+++ b/pages/games/zombies-and-bullets/index.html
@@ -53,8 +53,9 @@ useful_links:
     <div class="page-content text-white">
         <p class="mt-4" data-translate="zombies-and-bullets-desc-long" data-aos="fade-up"></p>
 
-        <div class="mt-5">
-            {% include game_links.html links=page.links %}
+        <!-- Iframes -->
+        <div class="mt-5" data-aos="fade-up">
+            <iframe src="https://store.steampowered.com/widget/2802870/" scrolling="no" width="100%" height="190" frameborder="0"></iframe>
         </div>
 
         <!-- Featured -->
