add description to games page

--- a/pages/games/mole-maniacs/index.html
+++ b/pages/games/mole-maniacs/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Mole Maniacs
+description: "Mole Maniacs is a Whack-A-Mole style game: a game that's not just a hit, but lots of them!"
 permalink: games/mole-maniacs
 swiper: true
 logo_share: mole-maniacs/logo.webp
