--- a/pages/games/zombies-and-bullets/index.html
+++ b/pages/games/zombies-and-bullets/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Zombies & Bullets
+description: "Zombies & Bullets is a 3D top-down shooter. Become the warrior of the zombie apocalypse!"
 permalink: games/zombies-and-bullets
 swiper: true
 logo_share: zombies-and-bullets/logo.webp
