add proper logo share to game pages

--- a/pages/games/mole-maniacs/index.html
+++ b/pages/games/mole-maniacs/index.html
@@ -4,7 +4,7 @@ title: Mole Maniacs
 description: "Mole Maniacs is a Whack-A-Mole style game: a game that's not just a hit, but lots of them!"
 permalink: games/mole-maniacs
 swiper: true
-logo_share: mole-maniacs/logo.webp
+logo_share: mole-maniacs/logo-share.webp
 screenshots:
     - screenshot-1.webp
     - screenshot-2.webp
